Fix gap in network component

--- a/src/routes/index.css
+++ b/src/routes/index.css
@@ -17,6 +17,7 @@
   position: absolute;
   top: -19px;
   left: -106px;
+  gap: 4px;
 }
 
 .index-network-text {
